add edit task functionality

--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
+    "dev": "astro dev --remote",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/db": "^0.15.0",
+    "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.1",
-    "htmx.org": "2.0.4"
+    "htmx.org": "2.0.4",
+    "tailwindcss": "^4.1.10"
   }
 }
