--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.1",
     "htmx.org": "2.0.4",
+    "nanoid": "^5.1.5",
     "tailwindcss": "^4.1.10"
   }
 }
