--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/db": "^0.15.0",
+    "@astrojs/netlify": "^6.3.4",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.1",
     "htmx.org": "2.0.4",
